learning-kubernetes/yamlfiles/deployment-def.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: myapp-deploy
    labels:
        app: myapp
        tier: front-end
spec:
    replicas: 3
    template:
        metadata:
            name: nginx
            labels:
                app: nginx
                tier: front-end
        spec:
            containers:
                - name: nginx
                  image: nginx:1.18.0.8
    selector:
        matchLabels:
            tier: front-end
