learning-kubernetes/yamlfiles/pod-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
    name: nginx
    labels:
        app: nginx
        tier: front-end
spec:
    containers:
        - name: nginx
          image: nginx
