learning-kubernetes/yamlfiles/ps-scheduler-01.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  -  image: nginx
     name: nginx
     #  nodeName: node01
  # If there is no scheduler running in k8s, we can manually schedule the pod by specifying 
  # the nodeName parameter. The Apiserver then creates a binding object for the same. 
  nodeName: controlplane
