learning-kubernetes/yamlfiles/pv-pvc.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: webapp
  namespace: default
spec:
  containers:
  - env:
    - name: LOG_HANDLERS
      value: file
    image: kodekloud/event-simulator
    imagePullPolicy: Always
    name: event-simulator
    volumeMounts:
    - mountPath: /log
      name: webapp-logs
  volumes:
  - name: webapp-logs
    hostPath: 
      path: /var/log/webapp
      type: Directory
---
apiVersion: v1
kind: Pod
metadata:
  name: webapp
  namespace: default
spec:
  containers:
  - env:
    - name: LOG_HANDLERS
      value: file
    image: kodekloud/event-simulator
    imagePullPolicy: Always
    name: event-simulator
    volumeMounts:
    - mountPath: /log
      name: webapp-logs
  volumes:
  - name: webapp-logs
    #hostPath: 
    #  path: /var/log/webapp
    #  type: Directory
    persistentVolumeClaim:
      claimName: claim-log-1
