learning-kubernetes/yamlfiles/service-def.yaml
apiVersion: v1
kind: Service
metadata:
    name: myapp-service
spec: 
    type: NodePort
    ports:
        - targetPort: 80
          port: 80
          nodePort: 30008
    selector:
        app: nginx
        tier: front-end
